adding various LFO shapes

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ tmp/
 *.o
 calc_lfoinc_table/calc-increments
 wavetable/formant_library_calc/make-waveform-library
+calc/wavecalc
+calc/LFO_LFO.h
+calc/plot.py
